--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Marin Iordan</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="favicon.ico?v=2" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,11 +12,11 @@
 
   <body>
     <div class="top_container">
-      <img src="image/cloud.png" alt="cloud-img" class="top-cloud">
+      <img src="cloud.png" alt="cloud-img" class="top-cloud">
       <h1>I'm Marin.</h1>
       <h2>a <span>future</span> programer</h2>
-      <img src="image/cloud.png" alt="cloud-img" class="bottom-cloud">
-      <img src="image/mountain.png" alt="mountain-img">
+      <img src="cloud.png" alt="cloud-img" class="bottom-cloud">
+      <img src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
